# fog-context

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  test.rb  test_brief.json  test_brief.py  test_model  test_model.rs  test_ort.rs  test_scan.py  test_search.py  test_swift.rs
.github/workflows/: release.yml
crates/fog-mcp-server/: Cargo.toml  build.rs
crates/fog-mcp-server/grammars/: .gitkeep
crates/fog-mcp-server/src/: main.rs  protocol.rs  registry.rs  router.rs  semantic.rs  stale.rs  test_swift.rs
crates/fog-mcp-server/src/indexer/: hints.rs  ingest.rs  langs.rs  mod.rs  walker.rs
crates/fog-mcp-server/src/tools/: add_constraint.rs  assign.rs  brief.rs  constraints.rs  decisions.rs  domains.rs  gaps.rs  impact.rs  import.rs  inspect.rs  lookup.rs  mod.rs  outline.rs  roots.rs  scan.rs  search.rs  trace.rs
crates/fog-memory/: Cargo.toml
crates/fog-memory/src/: compressor.rs  db.rs  enforcer.rs  lib.rs  query.rs  write.rs
crates/fog-types/: Cargo.toml
crates/fog-types/src/: config.rs  error.rs  event.rs  lib.rs  llm.rs  mcp.rs  provider.rs  risk.rs  schema.rs  tool.rs
logs/decisions/: 001-stale-checks.md  002-session-stats.md  003-semantic-search.md
python/: README.md  pyproject.toml
python/fog_context/: __init__.py  __main__.py
