[workspace]
resolver = "2"
members = [
    "crates/fog-types",
    "crates/fog-memory",
    "crates/fog-mcp-server",
]

[workspace.package]
version     = "0.5.6"
edition     = "2021"
rust-version = "1.75"
license     = "MIT"
authors     = ["FoG Framework Contributors"]
repository  = "https://github.com/luciusvo/fog-context"
homepage    = "https://github.com/luciusvo/fog-context"
keywords    = ["mcp", "ai", "code-intelligence", "tree-sitter"]
categories  = ["development-tools", "command-line-utilities"]

[workspace.dependencies]
# Serialization
serde      = { version = "1",  features = ["derive"] }
serde_json = "1"
uuid       = { version = "1",  features = ["v4", "serde"] }
thiserror  = "2"
chrono     = { version = "0.4", features = ["serde"] }

# Async
tokio      = { version = "1",  features = ["full"] }
async-trait = "0.1"

# SQLite
rusqlite   = { version = "0.32", features = ["bundled", "vtab"] }

# Tree-sitter (12 native languages)
tree-sitter             = "0.24"
tree-sitter-rust        = "0.23"
tree-sitter-typescript  = "0.23"
tree-sitter-python      = "0.23"
tree-sitter-go          = "0.23"
tree-sitter-c           = "0.24"
tree-sitter-cpp         = "0.23"
tree-sitter-java        = "0.23"
tree-sitter-c-sharp     = "0.23"
tree-sitter-ruby        = "0.23"
tree-sitter-php         = "0.24"
tree-sitter-lua         = "0.5"

# Error / Logging
tracing    = "0.1"

# Testing
tempfile   = "3"
insta      = { version = "1", features = ["json"] }
