[workspace]
resolver = "2"
members = [
    "crates/fog-types",
    "crates/fog-memory",
    "crates/fog-mcp-server",
]

[workspace.package]
version     = "0.8.0"
edition     = "2021"
rust-version = "1.75"
license     = "MIT"
authors     = ["FoG Framework Contributors"]
repository  = "https://github.com/luciusvo/fog-context"
homepage    = "https://github.com/luciusvo/fog-context"
keywords    = ["mcp", "ai", "code-intelligence", "tree-sitter"]
categories  = ["development-tools", "command-line-utilities"]

[workspace.dependencies]
# Serialization
serde      = { version = "1",  features = ["derive"] }
serde_json = "1"
uuid       = { version = "1",  features = ["v4", "serde"] }
thiserror  = "2"
chrono     = { version = "0.4", features = ["serde"] }

# Async
tokio      = { version = "1",  features = ["full"] }
async-trait = "0.1"

# SQLite
rusqlite   = { version = "0.32", features = ["bundled", "vtab"] }

# Tree-sitter (12 native languages)
# 0.25+ required for ABI 15 support (Dart grammar uses ABI 15)
tree-sitter             = "0.25"
tree-sitter-rust        = "0.24"
tree-sitter-typescript  = "0.23"
tree-sitter-python      = "0.25"
tree-sitter-go          = "0.25"
tree-sitter-c           = "0.24"
tree-sitter-cpp         = "0.23"
tree-sitter-java        = "0.23"
tree-sitter-c-sharp     = "0.23"
tree-sitter-ruby        = "0.23"
tree-sitter-php         = "0.24"
tree-sitter-lua         = "0.5"

# Error / Logging
tracing    = "0.1"

# OS / System
libc       = "0.2"

# Testing
tempfile   = "3"
insta      = { version = "1", features = ["json"] }

# Embedding (Semantic Search)
ort        = { version = "=2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "download-binaries", "tls-rustls"] }
tokenizers = "0.15"
ndarray    = "0.17"

# Text Search
regex      = "1.12.3"
