[package]
name        = "fog-memory"
description = "SQLite persistence layer for fog-context - 5-layer knowledge graph"
version.workspace    = true
edition.workspace    = true
rust-version.workspace = true
license.workspace    = true

[dependencies]
fog-types  = { path = "../fog-types" }
rusqlite   = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
ort        = { workspace = true, optional = true }
tokenizers = { workspace = true, optional = true }

[features]
embedding = ["dep:ort", "dep:tokenizers"]

[dev-dependencies]
tempfile = { workspace = true }
